Tidied up code based on static analysis. Added test for bulk metric ingest api.